# cluster_api

./: .gitignore  AUTHORS  CMakeLists.txt  English.README.md  README.md.ja  cluster_api.pc.in
include/: cluster_api.h  cluster_api_registernotify.h  cluster_api_shiftposition.h  cluster_api_speed.h  cluster_api_tacho.h  cluster_api_telltale.h  cluster_api_tripcomputer.h
src/: CMakeLists.txt  cluster_api.c  cluster_api_internal.h
test/client_test/: CMakeLists.txt  client_main.c  client_test_common.c  client_test_common.h  client_test_init_term.c  client_test_register_notify.c  client_test_shiftposition.c  client_test_speed.c  client_test_suites.h  client_test_tacho.c  client_test_telltale.c  client_test_tripcomputer.c  dummy_server.c
